[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/bfs5.dae" type="PackedScene" id=1]
[ext_resource path="res://bfs3.gd" type="Script" id=2]
[ext_resource path="res://assets/heatshield.tres" type="Material" id=3]
[ext_resource path="res://assets/white.material" type="Material" id=4]
[ext_resource path="res://assets/black.tres" type="Material" id=5]
[ext_resource path="res://assets/flag.tres" type="Material" id=6]
[ext_resource path="res://assets/spacex.tres" type="Material" id=7]

[node name="Scene Root" index="0" instance=ExtResource( 1 )]
script = ExtResource( 2 )
TOTAL_WINDOWS = 101

[node name="canard1" parent="." index="2"]
material/0 = ExtResource( 3 )
_sections_unfolded = [ "material" ]

[node name="top_fuse" parent="." index="3"]
material/0 = ExtResource( 4 )
_sections_unfolded = [ "Transform", "material" ]

[node name="hatch2_outline" parent="." index="4"]
material/0 = ExtResource( 5 )
_sections_unfolded = [ "material" ]

[node name="hatch1_outline" parent="." index="5"]
material/0 = ExtResource( 5 )
_sections_unfolded = [ "material" ]

[node name="hatch1" parent="." index="6"]
material/0 = ExtResource( 4 )
_sections_unfolded = [ "material" ]

[node name="hatch2" parent="." index="7"]
material/0 = ExtResource( 4 )
_sections_unfolded = [ "material" ]

[node name="flag" parent="." index="8"]
material/0 = ExtResource( 6 )
_sections_unfolded = [ "material" ]

[node name="spacex" parent="." index="9"]
material/0 = ExtResource( 7 )
_sections_unfolded = [ "material" ]

[node name="top_heatshield" parent="." index="10"]
material/0 = ExtResource( 3 )
_sections_unfolded = [ "material" ]

[node name="DirectionalLight" type="DirectionalLight" parent="." index="12"]
transform = Transform( -0.109759, -0.369038, 0.922911, -0.993812, 0.024852, -0.108253, 0.0170135, -0.929082, -0.369482, 0.165895, 10.2401, -18.7337 )
visible = false
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 1.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.1
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
directional_shadow_mode = 2
directional_shadow_split_1 = 0.1
directional_shadow_split_2 = 0.2
directional_shadow_split_3 = 0.5
directional_shadow_blend_splits = false
directional_shadow_normal_bias = 0.8
directional_shadow_bias_split_scale = 0.25
directional_shadow_depth_range = 0
directional_shadow_max_distance = 200.0

[node name="bottom_fuse" parent="." index="13"]
material/0 = ExtResource( 4 )
_sections_unfolded = [ "material" ]

[node name="bottom_heatshield" parent="." index="14"]
material/0 = ExtResource( 3 )
_sections_unfolded = [ "material" ]

[node name="window_54" parent="." index="72"]
_sections_unfolded = [ "material" ]

[node name="canard2" parent="." index="119"]
material/0 = ExtResource( 3 )
_sections_unfolded = [ "material" ]

[node name="DirectionalLight2" type="DirectionalLight" parent="." index="124"]
transform = Transform( 0.143366, 0.00512838, 0.989657, 0, 0.999987, -0.00518192, -0.98967, 0.00074291, 0.143364, 16.2981, 18.3488, 2.36099 )
visible = false
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 1.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.1
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
directional_shadow_mode = 2
directional_shadow_split_1 = 0.1
directional_shadow_split_2 = 0.2
directional_shadow_split_3 = 0.5
directional_shadow_blend_splits = false
directional_shadow_normal_bias = 0.8
directional_shadow_bias_split_scale = 0.25
directional_shadow_depth_range = 0
directional_shadow_max_distance = 200.0
_sections_unfolded = [ "Directional Shadow", "Light", "Shadow" ]

[node name="wing4" parent="." index="127"]
material/0 = ExtResource( 3 )
_sections_unfolded = [ "material" ]

